added fonts and matched all ui with their respective font

--- a/SwiftRedesign/Info.plist
+++ b/SwiftRedesign/Info.plist
@@ -4,24 +4,32 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
+		<string>SFProText-Medium.ttf</string>
+		<string>NotoSans-Regular.ttf</string>
+		<string>SFProText-RegularItalic.ttf</string>
+		<string>SFProText-Semibold.ttf</string>
 		<string>DS-DIGIT.TTF</string>
-		<string>DS-DIGI.TTF</string>
-		<string>DS-DIGIB.TTF</string>
+		<string>NotoSans-Bold.ttf</string>
+		<string>SFProText-Regular.ttf</string>
+		<string>SFProDisplay-Medium.ttf</string>
+		<string>SFProDisplay-Black.ttf</string>
+		<string>AntennaCond-Regular.otf</string>
+		<string>SFProText-MediumItalic.ttf</string>
+		<string>SFProText-Light.ttf</string>
+		<string>SFProDisplay-Regular.ttf</string>
 		<string>DS-DIGII.TTF</string>
 		<string>HEX-Font-Regular.ttf</string>
-		<string>NotoSans-Bold.ttf</string>
-		<string>NotoSans-BoldItalic.ttf</string>
-		<string>NotoSans-Italic.ttf</string>
-		<string>NotoSans-Regular.ttf</string>
-		<string>Montserrat-Italic_0.ttf</string>
-		<string>Montserrat-Regular.otf</string>
-		<string>SFProDisplay-Bold.ttf</string>
-		<string>SFProDisplay-Black.ttf</string>
 		<string>SFProText-SemiboldItalic.ttf</string>
-		<string>SFProText-Semibold.ttf</string>
-		<string>SFProText-Medium.ttf</string>
-		<string>SFProText-Regular.ttf</string>
+		<string>Montserrat-Regular.otf</string>
+		<string>Montserrat-Italic_0.ttf</string>
+		<string>NotoSans-BoldItalic.ttf</string>
+		<string>SFProDisplay-Bold.ttf</string>
+		<string>CallingHeart.otf</string>
+		<string>SFProText-Bold.ttf</string>
 		<string>GillSans-SemiBold-05.ttf</string>
+		<string>SFProDisplay-Semibold.ttf</string>
+		<string>Montserrat-SemiBold.otf</string>
+		<string>NotoSans-Italic.ttf</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
